--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "pm2-graylog",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "pm2 log send to graylog",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "gelf-pro": "~1.3",
+    "pm2": "latest",
+    "pmx": "latest"
+  }
 }
